tests/additional/fail/for_range.mvm
int i;

for (i in i * i) {}
for (i in 3) {}
for (i in i < 3) {}
for (i in i - 3) {}
